--- a/client/src/pages/home/style/Marquee.scss
+++ b/client/src/pages/home/style/Marquee.scss
@@ -4,11 +4,11 @@
   text-align: center;
 
   .marquee_content {
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
 
     h1 {
       font-size: 3rem;
-      margin-bottom: 9.2rem;
+      margin-bottom: 3.2rem;
       font-family: 'Bonita', sans-serif;
 
       @media (max-width: 768px) {
