--- a/client/src/components/testimonials/Testimonials.css
+++ b/client/src/components/testimonials/Testimonials.css
@@ -7,6 +7,7 @@
 .section-heading {
   color: #f6e7d8;
   font-family: "Lora", serif;
+  font-family: 'Bonita';
   font-size: 3rem;
   margin-bottom: 3rem;
 }
