--- a/client/src/pages/about/About.css
+++ b/client/src/pages/about/About.css
@@ -86,10 +86,9 @@
 .hero-content-text button {
   padding: 10px 20px;
   font-size: 1em;
-  border: 2px solid #fd791a;
+  border: 2px solid #b31b1b;
   border-radius: 20px;
-  background: transparent;
-  background: #d4905f9f ;
+  background: #d8343474 ;
   color: #f09a5c;
   color: white;
   cursor: pointer;
@@ -99,8 +98,8 @@
 .hero-content-text button:hover {
   transform: scale(1.1);
   transition: 0.5s ease;
-  box-shadow: 0 0 10px #f09a5cb6;
-  text-shadow: 0 0 10px #f09a5cb6;
+  box-shadow: 0 0 10px #d83434;
+  text-shadow: 0 0 10px #d83434;
 }
 
 .hero-content-text button:focus {
@@ -187,14 +186,14 @@
 
 .content h2 {
   font-size: 2rem;
-  color: #d9cab3;
+  color: white;
   /* muted green */
   margin-bottom: 10px;
-  font-family: "Lora", serif;
+  font-family: 'Bonita';
 }
 
 .content p {
-  color: #d9cab3;
+  color: white;
   font-size: 1rem;
   margin-bottom: 40px;
   font-family: "Lora", serif;
@@ -238,7 +237,7 @@
 
 .stat h3 {
   font-size: 3rem;
-  color: #f09a5c;
+  color: #d83434;
   font-family: "Lora", serif;
   margin: 0;
 
@@ -264,9 +263,9 @@
 
 .values-section h2 {
   font-size: 2.2rem;
-  color: #f5e8d4;
+  color: white;
   margin-bottom: 30px;
-  font-family: "Lora", serif;
+  font-family: 'Bonita';
 }
 
 .values-text {
@@ -414,7 +413,7 @@
 
 .team-title {
   font-size: 40px;
-  font-family: "Lora", serif;
+  font-family: "Bonita";
   color: white;
   margin-bottom: 30px;
 }
@@ -549,9 +548,9 @@
 .quote-btn {
   padding: 10px 20px;
   border-radius: 20px;
-  color: rgb(52, 73, 14);
+  color: white;
   font-weight: bold;
-  background-color: #f09a5c;
+  background-color: #d83434;
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   cursor: pointer;
