--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -72,10 +72,10 @@ $cream : #FFEEDB;
             font-family: 'Bonita', sans-serif;
             font-weight: 400;
             font-size: 2.45rem;
-            color: #5C8271;
+            color: black;
         }
     }
-
+    
     .box1_image {
         @include flexcenter;
         // border: 1px solid orange;
@@ -93,7 +93,7 @@ $cream : #FFEEDB;
 .for_box2_content{
     p{
         font-family: 'Roboto';
-        color: #5C8271;
+        color: black;
         line-height: 16.35px;
         font-size: 1rem
     }
@@ -132,15 +132,15 @@ $cream : #FFEEDB;
             width: 3rem;
             border-radius: 50%;
             background: transparent;
-            border: 2px solid $dark_green_color;
-            color: $dark_green_color;
+            border: 2px solid black;
+            color: black;
             font-size: 1.3rem;
             // font-weight: 800;
         }
-
+        
         span {
             font-size: 2rem;
-            color: $dark_green_color;
+            color: black;
         }
     }
 }
