--- a/client/src/pages/service/style/Customers.scss
+++ b/client/src/pages/service/style/Customers.scss
@@ -1,5 +1,3 @@
-
-
 .customers {
     background: black;
     padding: 2rem 5%;
@@ -90,6 +88,10 @@
         margin-top: 0;
         text-align: center;
         color: white;
+
+        h1 {
+            font-family: 'Bonita', sans-serif;
+        }
 
         @media (min-width: 1024px) {
             margin-top: 2rem;
@@ -251,7 +253,7 @@
 }
 
 
-.profileImage{
+.profileImage {
     // border: 2px solid red;
     box-shadow: 0px 0px 10px red;
     border-radius: 50%;
@@ -262,14 +264,14 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    
 
-    img{
+
+    img {
         height: 100%;
     }
 }
 
-.userbox{
+.userbox {
     // border: 2px solid red;
     box-shadow: 0px 0px 10px red;
     padding: 1rem 2%;
@@ -282,37 +284,37 @@
     gap: 2rem;
 }
 
-.user_details{
+.user_details {
     display: flex;
     flex-direction: column;
 }
 
-.user_location{
+.user_location {
     display: flex;
     gap: 1rem;
 
-    .user_area{
+    .user_area {
         display: flex;
         flex-direction: column;
     }
 }
 
-.user_quote{
+.user_quote {
     display: flex;
     flex-direction: column;
 
-    textarea{
+    textarea {
         max-width: 21rem;
     }
 }
 
 
-.testimonial_action_btn{
+.testimonial_action_btn {
     display: flex;
     margin-top: 0.3rem;
     gap: 1rem;
-    
-    button{
+
+    button {
         cursor: pointer;
         min-width: 5rem;
         height: 2rem;
@@ -324,17 +326,18 @@
 
 // btn
 
-.laptop_action{
+.laptop_action {
     display: none !important;
 }
 
 @media screen and (max-width: 768px) {
-    .desktop_action{
+    .desktop_action {
         display: none !important;
     }
-    .laptop_action{
+
+    .laptop_action {
         display: block !important;
-        display:  flex !important;
+        display: flex !important;
         gap: 2rem !important;
         gap: 1rem !important;
     }
