--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -8,11 +8,11 @@
     background-color: $dark_cover_color;
     position: absolute;
     color: black;
-    
-    
+
+
 }
 
-.service_main_container{
+.service_main_container {
     padding: 4rem 0rem;
 }
 
@@ -22,15 +22,15 @@
     height: 6rem;
     margin-top: 4rem;
     // display: none;
-    
+
     h1 {
         color: $cream;
         color: black;
-        font-family: "Crimson Text", serif;
+        font-family: 'Bonita', sans-serif;
         font-size: 3.25rem;
         letter-spacing: 6%;
     }
-    
+
     // background-color: $dark_cover_color;
 
 
@@ -45,7 +45,7 @@
     height: 20rem;
     padding: 1rem 5%;
     // background-color: $dark_cover_color;
-    
+
     .display_section {
         @include flexcenter;
         // border: 2px solid red;
@@ -64,7 +64,7 @@
         gap: 1rem;
         color: $cream;
         justify-content: space-around;
-        
+
         h2 {
             font-family: 'Bonita', sans-serif;
             font-size: 2.4rem;
@@ -72,7 +72,7 @@
             color: black;
             color: white;
         }
-        
+
         p {
             font-family: 'Roboto', sans-serif;
             font-size: 1.3rem;
@@ -81,7 +81,7 @@
             // color: white;
         }
 
-        &:hover{
+        &:hover {
             transition: 0.6s;
             background: rgb(199, 96, 96);
             color: black;
@@ -90,10 +90,11 @@
             // box-shadow: 0px 0px 10px #3A3042;
             box-shadow: none;
 
-            h2{
+            h2 {
                 color: black;
             }
-            p{
+
+            p {
                 color: black;
             }
         }
@@ -101,39 +102,41 @@
 }
 
 @media screen and (max-width: 768px) {
-    .service_design_details_sections{
+    .service_design_details_sections {
         flex-wrap: wrap !important;
         gap: 0.1rem;
     }
-    .display_section{
+
+    .display_section {
         max-width: 12 !important;
         width: 8rem !important;
         height: 8rem !important;
 
-        h2{
+        h2 {
             font-size: 1.6rem !important;
         }
-        p{
+
+        p {
             display: none;
             font-size: 0.9rem !important;
         }
     }
-    
+
 }
 
-.service_image{
+.service_image {
     // border: 2px solid red;
     // height: 40rem;
     width: 100vw;
     overflow: hidden;
 
-    img{
+    img {
         // width: 100%;
         height: 100%;
     }
 }
 
-.samehead{
+.samehead {
     position: absolute;
     top: 40%;
     left: 15%;
@@ -141,7 +144,8 @@
     font-family: 'Bonita', sans-serif;
     color: $cream;
 }
-.sub_heading{
+
+.sub_heading {
     position: absolute;
     top: 60%;
     left: 33%;
@@ -150,11 +154,11 @@
     color: $cream;
     // color: white;
     // text-shadow: 2px 2px 8px red;
-    
+
 }
 
-@media screen and (max-width: 1248px ) {
-    .samehead{
+@media screen and (max-width: 1248px) {
+    .samehead {
         position: absolute;
         top: 40%;
         left: 14%;
@@ -162,7 +166,8 @@
         font-family: 'Bonita', sans-serif;
         color: $cream;
     }
-    .sub_heading{
+
+    .sub_heading {
         position: absolute;
         top: 60%;
         left: 26%;
@@ -171,34 +176,36 @@
         color: $cream;
         // color: white;
         // text-shadow: 2px 2px 8px red;
-        
+
     }
-    
+
 }
 
-@media screen and (max-width: 768px ) {
-    .samehead{
+@media screen and (max-width: 768px) {
+    .samehead {
         top: 35% !important;
         left: 15% !important;
         font-size: 4rem !important;
     }
-    .sub_heading{
+
+    .sub_heading {
         top: 60% !important;
         left: 16% !important;
         font-size: 2.5rem !important;
-        
+
     }
-    
+
 }
 
 @media screen and (max-width: 486px) {
-    
-    .samehead{
+
+    .samehead {
         top: 30% !important;
         left: 2% !important;
         font-size: 3rem !important;
     }
-    .sub_heading{
+
+    .sub_heading {
         top: 40% !important;
         left: 18% !important;
         font-size: 2rem !important;
