--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -63,3 +63,9 @@
     // justify-content: center;
     // align-items: center;
 }
+
+@media screen and (max-width: 486px){
+    .Architecture{
+        height: 60rem !important;
+    }
+}
