--- a/client/src/pages/service/style/SubServicePage.scss
+++ b/client/src/pages/service/style/SubServicePage.scss
@@ -3,6 +3,8 @@
 
 .subservicepage {
   background: white;
+  margin-bottom: 1rem;
+  // border: 2px solid red;
 }
 
 .subservicepageimagecontainer {
@@ -14,10 +16,12 @@
     width: 100%;
     height: 100%;
 
-    .servimage img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    .servimage {
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 
@@ -326,5 +330,28 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+  }
+}
+
+
+@media screen and (max-width: 486px) {
+  .servimage {
+    height: 30rem !important;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+@media screen and (max-width: 964px) {
+  .servimage {
+    height: 50rem !important;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
