--- a/client/src/pages/home/style/HomeService.scss
+++ b/client/src/pages/home/style/HomeService.scss
@@ -66,6 +66,10 @@
 }
 
 @media (max-width: 768px) {
+
+  .text{
+    font-size: 3rem !important;
+  }
   .service_container_homes {
     padding: 2rem 1rem;
 
