--- a/client/src/pages/home/style/Schedule.scss
+++ b/client/src/pages/home/style/Schedule.scss
@@ -27,11 +27,11 @@
 
   .Schedule_heading {
     font-size: 3rem;
-    font-family: 'Cormorant Garamond', serif;
     line-height: 100%;
     font-weight: 400;
     margin-bottom: 2rem;
     color: #333;
+    font-family: 'Bonita', serif;
     font-family: "Crimson Text", serif;
 
     @media (max-width: 768px) {
