--- a/client/src/pages/home/projects/Projects.css
+++ b/client/src/pages/home/projects/Projects.css
@@ -10,15 +10,23 @@
 
 .project-section h1 {
   font-size: 3rem;
-  font-family: 'Lora', serif;
+  font-family: 'Bonita', serif;
   margin-bottom: 1rem;
   color: rgb(241, 241, 241);
   color: white;
+  text-align: center;
 }
 
 .project-section h3 {
   font-size: 1.25rem;
   color: rgb(182, 182, 182);
+  text-align: center;
+}
+
+@media screen and (max-width: 486px) {
+  .project-section h1{
+    font-size: 2.3rem;
+  }
 }
 
 .projects-container {
