--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -4,7 +4,7 @@
     height: 100%;
     // width: 100%;
     width: auto;
-    background: linear-gradient(rgba(0, 0, 0, 0.641));
+    background: linear-gradient(rgba(0, 0, 0, 0.641)) !important;
     padding: 6rem 0rem 0rem 0rem;
     color: white;
 }
