--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -87,8 +87,9 @@
             color: black;
             background: rgb(220, 218, 218);
             background: rgb(221, 193, 66);
-            // box-shadow: 0px 0px 10px #3A3042;
-            box-shadow: none;
+            background: white;
+            box-shadow: 0px 0px 10px #090909;
+            // box-shadow: none;
 
             h2 {
                 color: black;
