--- a/client/src/pages/about/About.css
+++ b/client/src/pages/about/About.css
@@ -58,6 +58,7 @@
 
   font-weight: bold;
   color: #d83434;
+  color: white;
 }
 
 .hero-content-text h1 span {
@@ -88,9 +89,9 @@
   font-size: 1em;
   border: 2px solid #b31b1b;
   border-radius: 20px;
-  background: #d8343474;
+  background: #d83434;
   color: #f09a5c;
-  color: white;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -522,14 +523,16 @@
 
 .quote-content h1 {
   font-size: 3rem;
-  font-family: "Lora", serif;
+  font-family: "Bonita", serif;
   font-weight: bold;
   margin-bottom: 15px;
+  color: white;
 }
 
 .quote-content h1 i {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-style: italic;
+  font-family: "Bonita", serif;
+  color: white;
+  font-weight: bold;
 }
 
 .quote-content p {
@@ -538,6 +541,7 @@
   font-family: "Lora", serif;
   font-size: 1.25rem;
   margin-bottom: 20px;
+  color: white;
 }
 
 .quote-content span {
@@ -599,6 +603,7 @@
     flex-direction: column;
     padding: 20px;
     gap: 20px;
+    height: 12rem !important;
     /* reduced gap for mobile */
   }
 
@@ -608,6 +613,7 @@
   }
 
   .quote-image {
+    display: none !important;
     margin-top: 0;
     /* remove extra vertical spacing */
   }
