--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -54,6 +54,7 @@ $cream : #FFEEDB;
     background: linear-gradient(180deg, $cream 50%, $cream 50%);
     // background: linear-gradient(180deg, $dark_cover_color 50%, $cream 50%);
     padding: 3rem 0rem;
+    // background: white;
     position: relative;
 
 }
