--- a/client/src/pages/service/style/Customers.scss
+++ b/client/src/pages/service/style/Customers.scss
@@ -252,6 +252,12 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .TCPhoneview{
+        display: none !important;
+    }
+}
+
 
 .profileImage {
     // border: 2px solid red;
