--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -77,7 +77,7 @@ $primary_green: rgb(62, 153, 62);
             padding: 0.5rem 1.4rem;
             border-radius: 1rem;
             background: rgb(2, 2, 2, 1);
-            color: rgba(255, 238, 219, 1);
+            color: $white_color;
             font-weight: 600;
             font-size: 1rem;
             transition: all 0.3s ease-in-out;
