--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -70,7 +70,7 @@
     .footer-brand {
       font-size: 1.4rem;
       font-weight: bold;
-      color: #fff;
+      color: #514bc6;
      
       font-family: 'Bonita', sans-serif;
       span {
@@ -81,7 +81,7 @@
     }
 
     .footer-tagline {
-      color: #1e90ff;
+      color: #b8babb;
       font-size: 0.95rem;
       margin-bottom: 1rem;
      
