--- a/client/src/pages/home/projects/Projects.css
+++ b/client/src/pages/home/projects/Projects.css
@@ -103,3 +103,21 @@ h4{
   z-index: 4;
 }
 
+.projects_explore_btn{
+  cursor: pointer;
+  height: 3rem;
+  width: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  background: #d83434;
+  font-size: 1rem;
+  font-family: 'Roboto';
+}
+.projects_explore_btn:hover{
+  border: 2px solid rgb(239, 131, 131);
+}
+
