--- a/client/src/pages/portfolio/Portfolio.scss
+++ b/client/src/pages/portfolio/Portfolio.scss
@@ -1,5 +1,6 @@
 .video_caraousel{
     background: #FFEEDB;
+    background: white;
     padding: 5rem 6%;
     display: flex;
     flex-direction: column;
