--- a/client/src/pages/service/style/SubServicePage.scss
+++ b/client/src/pages/service/style/SubServicePage.scss
@@ -53,34 +53,42 @@
 
 
 .service_category {
-  // border: 2px solid black;
   padding: 2rem 6%;
+  width: 100%;
+  overflow: hidden;
 
   .service_item {
-    // border: 2px solid red;
-    padding: 1.4rem 0.8rem;
-    // background: linear-gradient(90deg, rgba(0, 0, 0, 0.099), rgba(0, 0, 0, 0.225), rgba(255, 0, 0, 0.329), red);
-    width: 100%;
-    @include flexcenter;
+    padding: 1.4rem 2rem;
+    display: flex;
     gap: 2rem;
     overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    // -webkit-overflow-scrolling: touch; // Smooth scrolling on iOS
+    // scrollbar-width: none; // Hide scrollbar in Firefox
+    
+    // &::-webkit-scrollbar {
+    //   display: none; // Hide scrollbar in Chrome/Safari
+    // }
 
     .cat_card {
-      @include flexcenter;
-      cursor: pointer;
+      scroll-snap-align: start;
+      flex-shrink: 0;
+      display: flex;
       flex-direction: column;
-      // border: 2px solid blue;
-      background: black;
+      align-items: center;
+      justify-content: center;
       background: white;
       border-radius: 0.4rem;
       min-width: 8rem;
       height: 4rem;
       padding: 0.2rem 0.4rem;
       box-shadow: 0px 0px 7px rgba(144, 143, 143, 0.375);
+      cursor: pointer;
 
       .icon {
-        @include flexcenter;
-        // border: 2px solid red;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background: white;
         border-radius: 50%;
         height: 2rem;
@@ -89,6 +97,7 @@
 
       .cat_text {
         color: #d83434;
+        margin-top: 0.2rem;
       }
 
       &:hover {
@@ -99,10 +108,16 @@
           color: white;
         }
       }
+
+      &.active {
+        background: black;
+        .cat_text {
+          color: white;
+        }
+      }
     }
   }
 }
-
 
 .mid_container {
   background: white;
